# reta

./: .clang-format  .cmake-format.py  .cppcheck-suppressions  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  readme.md
.github/workflows/: workflow.yml
cmake/: CMakeLists.txt  HelperTargets.cmake  Utils.cmake
evaluation/: analyze-mutants.py  choose-mutants.py  compile-mutant.py  compile-mutants.py  evaluation.md  generate-mutants.py  remove-irrelevant-mutants.py
ext/: CMakeLists.txt
ext/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
python/: main.py
python/reta/: correlate.py  wav.py
python/test/: correlatetest.py  wavtest.py
resources/: CMakeLists.txt
src/: App.cpp  App.h  CMakeLists.txt  Reta.cpp  Reta.h  main.cpp
src/buffer/: Buffer.cpp  Buffer.h  BufferGenerator.h  CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.h
src/command/: CMakeLists.txt  Command.h  CompareCommand.cpp  CompareCommand.h  FastCommand.cpp  FastCommand.h  GenerateCommand.cpp  GenerateCommand.h  InfoCommand.cpp  InfoCommand.h  ReduceCommand.cpp  ReduceCommand.h  ServeCommand.cpp  ServeCommand.h  TestCommand.cpp  TestCommand.h  UpdateCommand.cpp  UpdateCommand.h
src/correlation/: CMakeLists.txt  Correlation.cpp  Correlation.h
src/fs/: CMakeLists.txt  FileSystem.h  FileSystemImpl.cpp  FileSystemImpl.h
src/ipog/: Acts.cpp  Acts.h  ActsConfigAdapter.cpp  ActsConfigAdapter.h  CMakeLists.txt  DitherAdapter.cpp  DitherAdapter.h
src/plugin/: BusLayout.cpp  BusLayout.h  CMakeLists.txt  Plugin.cpp  Plugin.h  PluginImpl.cpp  PluginImpl.h
src/server/: CMakeLists.txt  RetaClient.cpp  RetaClient.h  RetaServer.cpp  RetaServer.h
src/test/: CMakeLists.txt  ConfigGenerator.cpp  ConfigGenerator.h  InputSignals.cpp  InputSignals.h  TestCase.cpp  TestCase.h  TestConfiguration.cpp  TestConfiguration.h  TestInfo.h
src/util/: CMakeLists.txt  Permutation.cpp  Permutation.h  Random.h  Util.h
test/: Basic.cpp  CMakeLists.txt  main.cpp
test/assets/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  actsInput.txt  actsOutput.txt
test/buffer/: BufferTest.cpp  CMakeLists.txt  RandomGeneratorTest.cpp
test/correlation/: CMakeLists.txt  CancellationTest.cpp
test/fs/: CMakeLists.txt  FileSystemImplTest.cpp
test/ipog/: ActsConfigAdapterTest.cpp  CMakeLists.txt  DitherAdapterTest.cpp
test/plugin/: BusLayoutTest.cpp  CMakeLists.txt  PluginImplTest.cpp
test/server/: CMakeLists.txt  RetaServerTest.cpp
test/test/: CMakeLists.txt  InputSignalsTest.cpp  TestCaseTest.cpp  TestConfigurationTest.cpp
test/util/: CMakeLists.txt  FileSystemStub.h  PermutationTest.cpp  PluginStub.h  RandomTest.cpp  ReduceTest.cpp
